[fix] Modal width at max-width 992

--- a/index.css
+++ b/index.css
@@ -323,6 +323,10 @@ h1, h2, h3, h4, h5, h6 {
         width: 100%;
         margin: 0;
     }
+
+    .modal .content {
+        width: 80%;
+    }
 }
 
 @media screen and (max-width: 768px) and (orientation: portrait) {
@@ -335,6 +339,10 @@ h1, h2, h3, h4, h5, h6 {
     }
     .input-name {
         width: 90%;
+    }
+
+    .modal .content {
+        width: 80%;
     }
 }
 
