--- a/index.css
+++ b/index.css
@@ -24,6 +24,44 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #efefef;
 }
 
+.loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #000;
+}
+
+.wavy {
+    position: relative;
+    -webkit-box-reflect: below -12px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
+}
+
+.wavy span {
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    font-size: 2em;
+    text-transform: uppercase;
+    animation: animate 1s ease-in-out infinite;
+    animation-delay: calc(0.1s * var(--i));
+}
+
+@keyframes animate {
+    0% {
+        transform: translateY(0px)
+    }
+    20% {
+        transform: translateY(-20px);
+    }
+    40%, 100% {
+        transform: translateY(0px);
+    }
+}
+
 .todo-header {
     width: 100%;
     background-color: #333;
@@ -106,6 +144,14 @@ h1, h2, h3, h4, h5, h6 {
     box-shadow: 2px 5px 5px 3px #e8e8e8, 2px -5px 5px 3px #e8e8e8, -2px 5px 5px 3px #e8e8e8, -2px -5px 5px 3px #e8e8e8;
     border: 2px solid #333;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.change-date-span {
+    font-size: 2rem;
+    cursor: pointer;
 }
 
 .todo-today-title-div h2 {
@@ -346,15 +392,6 @@ h1, h2, h3, h4, h5, h6 {
     text-align: left;
     margin-top: 0.5rem;
     margin-left: 0.5rem;
-}
-
-.loading {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: #fff;
 }
 
 .editable-todo {
