--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 100vw;
     min-height: 100vh;
     background: #000;
 }
