--- a/index.css
+++ b/index.css
@@ -188,6 +188,29 @@ h1, h2, h3, h4, h5, h6 {
     display: none;
 }
 
+.todo-donetodo-body {
+    margin-top: 4rem;
+    border-top: 5px solid rgba( 144, 144, 144, 0.4);
+}
+
+.todo-donetodo-title {
+    text-align: center;
+    padding: 1rem;
+}
+
+.todo-donetodo-title h3 span {
+    font-size: 2.4rem;
+}
+
+.todo-donetodo-title h3 span:first-child {
+    margin-right: 1rem;
+}
+
+.todo-donetodo-title h3 span:last-child {
+    font-size: 2rem;
+    color: #bbb;
+}
+
 .overlay {
     width: 100%;
     height: 100%;
@@ -287,6 +310,21 @@ h1, h2, h3, h4, h5, h6 {
     text-align: right;
 }
 
+.todo-hastodo-header h3 {
+    text-align: center;
+}
+
+.todo-hastodo-header h3 span{
+    font-size: 2.4rem;
+    color: #333;
+}
+
+.todo-hastodo-header h3 span:last-child{
+    margin-left: 1rem;
+    font-size: 2rem;
+    color: rgba( 144, 144, 144, 0.6);
+}
+
 .todo-hastodo-header span {
     color: rgb(232, 188, 132);
     cursor: pointer;
@@ -295,14 +333,25 @@ h1, h2, h3, h4, h5, h6 {
 .todo-daily {
     width: 100%;
     margin-top: 1rem;
-    border: 2px solid rgba( 144, 144, 144, 0.6);
-    padding: 1rem;
+    border-top: 2px solid rgba( 144, 144, 144, 0.4);
+    border-right: 2px solid rgba( 144, 144, 144, 0.4);
+    border-bottom: 4px solid rgba(33, 33, 33);
+    border-left: 2px solid rgba( 144, 144, 144, 0.4);
+    padding: 1.5rem 2rem;
     transition: all 0.4s ease-in;
+    border-radius: 10px;
+}
+
+.todo-daily:hover {
+    transform: rotate(5deg);
 }
 
 .todo-daily.done {
-    background-color: #bbb;
     transition: all 0.4s ease-in;
+}
+
+.todo-daily.done:hover {
+    transform: rotate(-5deg);
 }
 
 .todo-daily-title {
@@ -347,8 +396,9 @@ h1, h2, h3, h4, h5, h6 {
     border: none;
     transform: translateY(0);
 }
+
 .todo-daily-title input:checked + label::after{
-    color: rgb(242,  77, 61);
+    color: rgba( 144, 144, 144, 0.4);
     content: "\2713";
 }
 
